# cpp-utils

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  cpp-utils-config.cmake.in
include/cpp_utils/primitives/: idisable_copy.hpp  idisable_move.hpp
include/cpp_utils/time/: measure_duration.hpp
include/primitives/: idisable_copy.hpp  idisable_move.hpp
tests/unit/: CMakeLists.txt
tests/unit/src/primitives/: idisable_copy_test.cpp  idisable_move_test.cpp
tests/unit/src/time/: measure_duration_test.cpp
